# zom

./: Cargo.toml  LICENSE  整理思路.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
.zed/: tasks.json
apps/zom-desktop/: Cargo.toml
apps/zom-desktop/src/: main.rs
crates/zom-app/: Cargo.toml
crates/zom-app/src/: initial_state.rs  lib.rs  sample.rs  state.rs  utils.rs
crates/zom-app/src/projection/: shortcuts.rs
crates/zom-app/src/state/: desktop_app.rs  file_tree.rs  mod.rs  pane.rs  panel_layout.rs  (+2 more)
crates/zom-core/: Cargo.toml  README.md
crates/zom-core/src/: command.rs  direction.rs  focus.rs  ids.rs  input.rs  lib.rs  position.rs  range.rs  selection.rs
crates/zom-editor/: Cargo.toml
crates/zom-editor/examples/: core_perf_baseline.rs
crates/zom-editor/src/: buffer.rs  lib.rs  viewer_layout.rs
crates/zom-gpui/: Cargo.toml
crates/zom-gpui/src/: assets.rs  chrome.rs  icon.rs  input.rs  lib.rs  spacing.rs
crates/zom-input/: Cargo.toml
crates/zom-input/src/: defaults.rs  keymap.rs  lib.rs  shortcuts.rs
crates/zom-protocol/: Cargo.toml  README.md
crates/zom-protocol/src/: editor_events.rs  focus.rs  ids.rs  keyboard.rs  lib.rs  position.rs  range.rs  selection.rs
crates/zom-runtime/: Cargo.toml
crates/zom-runtime/src/: buffer_preview.rs  draft_store.rs  initial_state.rs  lib.rs  utils.rs  workspace_paths.rs
crates/zom-text/: Cargo.toml
crates/zom-text-tokens/: Cargo.toml
crates/zom-text-tokens/src/: lib.rs
crates/zom-text/src/: lib.rs  line_index.rs
crates/zom-workspace/: Cargo.toml
crates/zom-workspace/src/: file_tree.rs  lib.rs  pane.rs  panel_layout.rs
docs/: Crate边界契约.md  README.md  开发规范手册.md  整理思路.md  面板开发契约.md
docs/adr/: 0001-workspace-command-and-input-routing.md
docs/architecture/: Crate边界契约.md  架构哲学与模块宪章.md
docs/playbooks/: 文本编辑能力8周执行清单.md  编辑引擎性能基线.md  编辑引擎核心能力开发清单.md  通用命令执行链路.md  通知系统设计与契约.md  面板开发契约.md
docs/rfcs/: editor-engine-rfc.md
docs/standards/: 开发规范手册.md
scripts/: bench-editor-core.sh  check-boundaries.sh  check-control-char-literals.sh  check-icon-centralization.sh  check-rustdoc-coverage.sh
(+177 files in other folders)
